# women-bot

./: config.py  main.py  nohup.out  pyproject.toml  setup.py
app/database/: women_bot.db
app/database/models/: __init__.py  users.py
app/database/requests/: crud.py
app/filters/: chat_types.py
app/handlers/admin/: admin_cancel.py  admin_mailing.py  admin_start.py  admin_stat.py
app/handlers/user/: men_menu.py  start.py  tinkoff_user_pay.py  women_check_number.py  women_help.py  women_profile.py  women_review.py
app/templates/keyboards/: inline_buttons.py  keyboard_buttons.py
app/templates/texts/: user.py
tests/: test_phone_numer.py
