[tool.poetry]
name = "women-bot"
version = "0.1.0"
description = ""
authors = ["venya <ve.po2014@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.7.0"
sqlalchemy = "^2.0.30"
redis = "^5.0.5"
apscheduler = "^3.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
