[tool.poetry]
name = "women-bot"
version = "0.1.0"
description = ""
authors = ["venya <ve.po2014@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.7.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.30"}
redis = "^5.0.5"
apscheduler = "^3.10.4"
aiosqlite = "^0.20.0"
setuptools = "^70.0.0"
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
itsdangerous = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
